Fix #6 and also refine the code for better reading visibility

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -59,7 +59,7 @@ div {
   display: table;
 }
 
-#error_explanation {
+#error-explanation {
   width: 450px;
   border: 2px solid red;
   padding: 7px;
